--- a/server/views/index.jade
+++ b/server/views/index.jade
@@ -14,7 +14,13 @@ html
 		link(href="/css/main.css" rel="stylesheet" )
 	body
 		h1.jumbotron Hello, world!
-
+		hr
+		.container
+			.row
+			- for(var i=0;i<5;i++)		
+				.col-md-3
+					.box
+						h3 Factbase offset
+						p Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quaerat dolore provident, dolores voluptatum facere accusamus quae amet error vel laudantium, assumenda pariatur ut iure delectus, tempore minima esse ipsam blanditiis.
 		script(src='/vendor/jquery/dist/js/jquery.js' type="text/JavaScript")
-
 		script(src='/vendor/bootstrap/dist/js/bootstrap.js' type="text/JavaScript")
