--- a/server/srs/main.scss
+++ b/server/srs/main.scss
@@ -1,9 +1,7 @@
-.box{
-	p{
-	border: 1px solid #0072bc;
-	box-shadow: 1px 0px 23px gray;
-	margin-bottom:40px;
-	position: relative;
-	  height: 211px
-	}
+@import 'header';
+@import 'footer';
+
+body{
+	padding-top: 90px;
 }
+
